# Wizard-jb2

./: .gitignore  .gitlab-ci.yml  README.md
.github/workflows/: main.yml
actions/: action.yml
app/: index.html  package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
app/src/: App.tsx  index.css  index.tsx
app/src/components/: Editor.tsx  ImageNodeView.ts  MathNodeView.ts  toolbar.tsx
app/src/components/github/: BranchDropdown.tsx  GitHubAuthPanel.tsx  GitHubDropdown.tsx  GitHubTokenInput.tsx  GitHubUserPanel.tsx
app/src/components/toolbar/: HintTooltip.tsx  TableGridSelector.tsx  ToolbarDropdown.tsx  ToolbarDropdownWithLabels.tsx  ToolbarHintButton.tsx  editor_plugins.ts  toolbar.tsx  toolbar_buttons.tsx  toolbar_commands.ts  toolbar_components.tsx  toolbar_dropdowns.tsx
app/src/lib/: editor_plugins.ts  github.ts
app/src/lib/github/: BranchSignal.ts  Depreciated.ts  GithubLogin.ts  (+2 more)
app/tests/: App.test.tsx  index.test.tsx  parser.test.ts
app/tests/components/: Editor.test.tsx
app/tests/lib/: database.test.ts  editor_plugin.test.tsx
script/: start_wizard.js
sphinx_extension/: MANIFEST.in  pyproject.toml
sphinx_extension/extension_name/: __init__.py
sphinx_extension/extension_name/_static/: add_editor.js
sphinx_extension/teachbooks_software_project_extension_name/: __init__.py
sphinx_extension/teachbooks_software_project_extension_name.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
sphinx_extension/teachbooks_software_project_extension_name/_static/: add_editor.js  main.js
src/: pyproject.toml
src/basic_extension/: __init__.py
(+14 files in other folders)
