[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "myFirst_sphinx_extension"
version = "0.0.1"
description = "My frist Sphinx extension"
authors = [{ name = "Leander Bindt", email = "l.bindt@student.tudelft.nl" }]
dependencies = ["sphinx", "docutils"]